--- a/smart-contract/package.json
+++ b/smart-contract/package.json
@@ -6,16 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/TalenticaEmergingTech/blockchain-workshop-june-2023.git"
-  },
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/TalenticaEmergingTech/blockchain-workshop-june-2023/issues"
-  },
-  "homepage": "https://github.com/TalenticaEmergingTech/blockchain-workshop-june-2023#readme",
   "devDependencies": {
     "@nomicfoundation/hardhat-chai-matchers": "^2.0.1",
     "@nomicfoundation/hardhat-ethers": "^3.0.2",
@@ -24,17 +16,12 @@
     "@nomicfoundation/hardhat-verify": "^1.0.1",
     "@typechain/ethers-v6": "^0.4.0",
     "@typechain/hardhat": "^8.0.0",
-    "@types/chai": "^4.3.5",
-    "@types/mocha": "^10.0.1",
-    "@types/node": "^20.3.1",
     "chai": "^4.3.7",
-    "ethers": "^6.5.1",
+    "ethers": "^6.6.0",
     "hardhat": "^2.15.0",
     "hardhat-gas-reporter": "^1.0.9",
     "solidity-coverage": "^0.8.2",
-    "ts-node": "^10.9.1",
-    "typechain": "^8.2.0",
-    "typescript": "^5.1.3"
+    "typechain": "^8.2.0"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^4.9.1"
