--- a/smart-contract/package.json
+++ b/smart-contract/package.json
@@ -17,6 +17,7 @@
     "@typechain/ethers-v6": "^0.4.0",
     "@typechain/hardhat": "^8.0.0",
     "chai": "^4.3.7",
+    "dotenv": "^16.1.4",
     "ethers": "^6.6.0",
     "hardhat": "^2.15.0",
     "hardhat-gas-reporter": "^1.0.9",
