--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,16 +1,27 @@
-name: Unit Tests
-on: [push, pull_request]
+name: CI
+
+on:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
+      - additional-features
 
 jobs:
-  test:
+  build:
     runs-on: ubuntu-latest
-    name: Hardhat unit tests
+
     steps:
-    - name: Checkout
-      uses: actions/checkout@v2
-    - name: Environment
-      uses: actions/setup-node@v3
-    - name: Test
-      uses: ambersun1234/hardhat-test-action@v1
-      with:
-        network: hardhat
+      - name: Checkout repository
+        uses: actions/checkout@v2
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
+
+      - name: Install dependencies
+        run: npm install
+
+      - name: Run tests
+        run: npx hardhat test ./smart-contract/test/*.js
